--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,21 @@
  *= require_tree .
  *= require_self
  */
+
+ .home-image {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    min-height: 300px;
+    background-image: url('home.jpg');
+    background-size: cover;
+ }
+
+ .header-color {
+   background-color: #646464;
+ }
+
+ .size {
+   height: 10%;
+   width: 10%;
+ }
