--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,24 +9,24 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
   </head>
 
   <body>
     <header>
-      <nav>
-          <% if user_signed_in? %>
-            <strong><%= link_to current_user.name, page_path(current_user.id) %></strong>
-            <%= link_to 'プロフィール変更', edit_user_registration_path %>
-            <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
-          <% else %>
-            <%= link_to 'サインアップ', new_user_registration_path %>
-            <%= link_to 'ログイン', new_user_session_path %>
-          <% end %>
+      <nav class="p-4 header-color d-flex justify-content-between">
+        <% if user_signed_in? %>
+          <%= link_to image_tag("rogomark.png", class:"size"), root_path %>
+          <div type="button" class="btn btn-light rounded-pill" ><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></div>
+        <% else %>
+            <%= image_tag("rogomark.png", class:"size") %>
+            <div>
+              <div type="button" class="btn btn-light rounded-pill px-2 mx-3"><%= link_to 'ログイン', new_user_session_path %></div>
+              <div type="button" class="btn btn-light rounded-pill px-2 mx-3"><%= link_to '新規登録', new_user_registration_path %></div>
+            </div>
+        <% end %>
       </nav>
     </header>
-
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
 
     <%= yield %>
   </body>
