--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <header>
       <nav class="p-4 header-color d-flex justify-content-between">
         <% if user_signed_in? %>
-          <%=link_to image_tag("rogomark.png", class:"size2"),"/" %>
+          <%=link_to image_tag("rogomark.png", class:"size2"), pages_top_path %>
           <div type="button" class="btn btn-light rounded-pill px-2 mx-3" ><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></div>
         <% else %>
             <%= image_tag("rogomark.png", class:"size") %>
