ホーム画面　文字の影付け

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,7 +2,7 @@
   <head>
   </head>
   <body>
-    <div class="d-flex flex-column align-items-center justify-content-center text-white home-image">
+    <div class="d-flex flex-column align-items-center justify-content-center text-white home-image text-shadow">
       <div class="m-5 display-3">
         <p>MT.BEGINNERとは？</p>
       </div>
