--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
           <%=link_to image_tag("rogomark.png", class:"size"), pages_top_path %>
           <div class="d-flex align-items-center justify-content-center">
             <a href="/pages/<%= current_user.id %>" class="h4">
-              <span>こんにちは、</span><%= (current_user.name) %>
+              <span>こんにちは、</span><%= (current_user.name) %><span>さん</span>
             </a>
             <div type="button" class="btn btn-light rounded-pill px-2 mx-3" ><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></div>
           </div>
