--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,16 +18,31 @@
         <% if user_signed_in? %>
           <%=link_to image_tag("rogomark.png", class:"size"), pages_top_path %>
           <div class="d-flex align-items-center justify-content-center">
-            <a href="/pages/<%= current_user.id %>" class="h4">
+            <a href="/pages/<%= current_user.id %>" class="h4 text-white">
               <span>こんにちは、</span><%= (current_user.name) %><span>さん</span>
             </a>
-            <div type="button" class="btn btn-light rounded-pill px-2 mx-3" ><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></div>
+            <div type="button" class="btn btn-light rounded-pill px-2 mx-3" ><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "text-reset" %></div>
+
+            <div class="nav-wrapper">
+              <nav class="header-nav d-flex align-items-center justify-content-center text-center h4">
+                <ul class="nav-list list-unstyled">
+                  <li class="nav-item my-5"><a href="#" class="text-white">山検索</a></li>
+                  <li class="nav-item my-5"><a href="#" class="text-white">写真投稿</a></li>
+                  <li class="nav-item mz-5"><a href="#" class="text-white">チャットルーム</a></li>
+                </ul>
+              </nav>
+            </div>
+            <div class="burger-btn mx-4">
+              <span class="bar bar_top"></span>
+              <span class="bar bar_mid"></span>
+              <span class="bar bar_bottom"></span>
+            </div>
           </div>
         <% else %>
             <%= link_to image_tag("rogomark.png", class:"size"), root_path %>
             <div>
-              <div type="button" class="btn btn-light rounded-pill px-3 mx-3"><%= link_to 'ログイン', new_user_session_path %></div>
-              <div type="button" class="btn btn-light rounded-pill px-3 mx-3"><%= link_to '新規登録', new_user_registration_path %></div>
+              <div type="button" class="btn btn-light rounded-pill px-3 mx-3"><%= link_to 'ログイン', new_user_session_path, class: "text-reset" %></div>
+              <div type="button" class="btn btn-light rounded-pill px-3 mx-3"><%= link_to '新規登録', new_user_registration_path, class: "text-reset" %></div>
             </div>
         <% end %>
       </nav>
