--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -154,3 +154,12 @@ transition: transform .3s;
 body.noscroll{
   overflow: hidden;
 }
+
+.mypage-image {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  min-height: 300px;
+  background-image: url('mypage.jpg');
+  background-size: cover;
+}
