--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,10 @@
         <% if user_signed_in? %>
           <%=link_to image_tag("rogomark.png", class:"size"), pages_top_path %>
           <div class="d-flex align-items-center justify-content-center">
-            <a href="/pages/<%= current_user.id %>" class="h4 text-white">
+            <a href="/pages/<%= current_user.id %>" class="h4 text-white mx-4">
               <span>こんにちは、</span><%= (current_user.name) %><span>さん</span>
             </a>
-            <div type="button" class="btn btn-light rounded-pill px-2 mx-3" ><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "text-reset" %></div>
+            <div type="button" class="btn btn-light rounded-pill px-2 mx-4" ><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "text-reset" %></div>
 
             <div class="nav-wrapper">
               <nav class="header-nav d-flex align-items-center justify-content-center text-center h4">
