--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,7 +22,24 @@
     min-height: 300px;
     background-image: url('home.jpg');
     background-size: cover;
+    z-index: 0;
  }
+
+ .home-image:before{
+  content: '';
+  background: inherit;
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+  position: absolute;
+  top: 5px;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  z-index: -1;
+}
 
  .header-color {
    background-color: #646464;
@@ -165,4 +182,26 @@ body.noscroll{
   min-height: 300px;
   background-image: url('mypage.jpg');
   background-size: cover;
+  z-index: 0;
+}
+
+.mypage-image:before{
+  content: '';
+  background: inherit;
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+  position: absolute;
+  top: 3px;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  z-index: -1;
+}
+
+.prf-size {
+  height: 80px;
+  width: 900px;
 }
