--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
                   <li class="nav-item my-5"><a href="/pages/<%= current_user.id %>" class="text-white">マイページ</a></li>
                   <li class="nav-item my-5"><a href="#" class="text-white">山検索</a></li>
                   <li class="nav-item my-5"><a href="#" class="text-white">写真投稿</a></li>
-                  <li class="nav-item mz-5"><a href="#" class="text-white">チャットルーム</a></li>
+                  <li class="nav-item my-5"><a href="#" class="text-white">チャットルーム</a></li>
                 </ul>
               </nav>
             </div>
@@ -42,8 +42,8 @@
         <% else %>
             <%= link_to image_tag("rogomark.png", class:"size"), root_path %>
             <div>
-              <div type="button" class="btn btn-light rounded-pill px-3 mx-3"><%= link_to 'ログイン', new_user_session_path, class: "text-reset" %></div>
-              <div type="button" class="btn btn-light rounded-pill px-3 mx-3"><%= link_to '新規登録', new_user_registration_path, class: "text-reset" %></div>
+              <div type="button" class="btn btn-light rounded-pill px-3 mx-3"><%= link_to 'ログイン', new_user_session_path, class: "text-reset font-weight-bold" %></div>
+              <div type="button" class="btn btn-light rounded-pill px-3 mx-3"><%= link_to '新規登録', new_user_registration_path, class: "text-reset font-weight-bold" %></div>
             </div>
         <% end %>
       </nav>
