ログイン、新規登録画面のデザイン

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,7 +3,7 @@
   </head>
   <body>
     <div class="d-flex flex-column align-items-center justify-content-center text-white home-image text-shadow">
-      <div class="m-5 display-3">
+      <div class="m-5 display-3 font-weight-bold">
         <p>MT.BEGINNERとは？</p>
       </div>
       <div class="text-center m-5 h3">
