--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,34 +3,35 @@
   <div class="bg-signin">
   <p class="h1 font-weight-bold m-3 px-3 text-shadow text-center">SIGN UP</p>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <div class="text-center">
+
+    <div class="text-center text-shadow">
       <%= render "devise/shared/error_messages", resource: resource %>
     </div>
 
-    <div class="d-flex flex-column align-items-center justify-content-center">
-      <div class="field">
+    <div class="m-4 text-shadow">
+      <div class="field d-flex justify-content-between">
         <%= f.label :ユーザーネーム %>
         <%= f.text_field :name %>
-     </div>
+      </div>
 
-      <div class="field">
+      <div class="field d-flex justify-content-between">
         <%= f.label :メールアドレス %>
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
       </div>
 
-      <div class="field">
+      <div class="field d-flex justify-content-between">
         <%= f.label :"パスワード(6文字以上)" %>
         <%= f.password_field :password, autocomplete: "new-password" %>
       </div>
 
-      <div class="field">
+      <div class="field d-flex justify-content-between">
         <%= f.label :パスワード再入力 %>
         <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
       </div>
+    </div>
 
-      <div class="actions m-4">
-        <%= f.submit "Sign up" %>
-      </div>
+    <div class="actions d-flex justify-content-center align-items-center m-4">
+      <%= f.submit "Sign up", class:"box-shadow" %>
     </div>
   <% end %>
   </div>
