マイページの画像サイズ調整

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -3,7 +3,7 @@
 <div class="d-flex align-items-center justify-content-center flex-column">
   <div class="m-3">
     <% if @user.image.attached? %>
-      <%= image_tag @user.image %>
+      <%= image_tag @user.image.variant(combine_options:{gravity: :center, resize:"400x400^",crop:"400x400+0+0"}).processed %>
     <% end %>
   </div>
 
