--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
               <nav class="header-nav d-flex align-items-center justify-content-center text-center h4">
                 <ul class="nav-list list-unstyled">
                   <li class="nav-item my-5"><a href="/pages/<%= current_user.id %>" class="text-white">マイページ</a></li>
-                  <li class="nav-item my-5"><a href="#" class="text-white">山検索</a></li>
+                  <li class="nav-item my-5"><a href="/mountains" class="text-white">山検索</a></li>
                   <li class="nav-item my-5"><a href="#" class="text-white">写真投稿</a></li>
                   <li class="nav-item my-5"><a href="#" class="text-white">チャットルーム</a></li>
                 </ul>
