--- a/app/assets/stylesheets/admin/mountains.scss
+++ b/app/assets/stylesheets/admin/mountains.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the admin::mountain controller here.
+// Place all the styles related to the admin::mountains controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
