--- a/app/views/mountains/new.html.erb
+++ b/app/views/mountains/new.html.erb
@@ -1,10 +1,10 @@
 <h1>管理者新規投稿ページ</h1>
 
 <%= form_with model: @mountain, local:true do |f| %>
-  <%= f.label :image %>
+  <%= f.label :image, "山の写真" %>
   <%= f.file_field :image %>
 
-  <%= f.label :name %>
+  <%= f.label :name, "山の名前" %>
   <%= f.text_field :name %>
 
   <%= f.label :area_id, "地域" %>
