--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -242,3 +242,20 @@ body.noscroll{
   bottom: -5px;
   z-index: -1;
 }
+
+.bg-search {
+  background: rgba(55, 75, 54, 0.8);
+ }
+
+.table_sticky {
+  display: block;
+  overflow-y: scroll;
+  height: calc(200vh/3);
+}
+
+.table_sticky thead th {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background: #0e4e1e;
+}
