--- a/app/views/mountains/show.html.erb
+++ b/app/views/mountains/show.html.erb
@@ -1,7 +1,7 @@
 <div class="search-image">
 
 <div class="d-flex align-items-center justify-content-center flex-column">
-  <div class="display-4 text-center text-white text-shadow m-5">こちらの山はいかがでしょうか？</div>
+  <div class="display-4 text-center text-white text-shadow m-4">こちらの山はいかがでしょうか？</div>
 
   <div class="d-flex align-items-center justify-content-center">
     <% if @mountain.image.attached? %>
@@ -9,9 +9,9 @@
     <% end %>
   </div>
 
-  <h1 class="text-center text-white text-shadow m-4"><%= @mountain.name %></h1>
+  <h1 class="text-center text-white text-shadow m-3"><%= @mountain.name %></h1>
 
-  <div class="d-flex align-items-center justify-content-around rounded-pill bg-white box-shadow h3 w-75">
+  <div class="d-flex align-items-center justify-content-around rounded-pill bg-white box-shadow h3 w-75 m-3">
     <div class="d-flex align-items-center justify-content-center flex-column px-5">
       <div>「地域」</div>
       <div>
@@ -30,5 +30,5 @@
     </div>
   </div>
 
-  <%= link_to "戻る", mountains_path, class:"box-shadow btn btn-light rounded-pill px-3 m-5" %>
+  <%= link_to "戻る", mountains_path, class:"box-shadow btn btn-light rounded-pill px-3 m-4" %>
 </div>
