--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -210,8 +210,25 @@ body.noscroll{
   box-shadow: 2px 2px #000000;
 }
 
-.text-bg {
+.fivewords-bg {
   height: auto;
   width: 205px;
+  background: rgba(55, 75, 54, 0.8);
+}
+
+/* 写真投稿機能 */
+.tweet-image {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  min-height: 300px;
+  background-image: url('tweet.jpg');
+  background-size: cover;
+  z-index: 0;
+}
+
+.sevenwords-bg {
+  height: auto;
+  width: 285px;
   background: rgba(55, 75, 54, 0.8);
 }
