--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
                 <ul class="nav-list list-unstyled">
                   <li class="nav-item my-5"><a href="/pages/<%= current_user.id %>" class="text-white">マイページ</a></li>
                   <li class="nav-item my-5"><a href="#" class="text-white">山検索</a></li>
-                  <li class="nav-item my-5"><a href="/pages/:page_id/tweets/new" class="text-white">写真投稿</a></li>
+                  <li class="nav-item my-5"><a href="/tweets/new" class="text-white">写真投稿</a></li>
                   <li class="nav-item my-5"><a href="#" class="text-white">チャットルーム</a></li>
                 </ul>
               </nav>
