--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="mypage-image">
-<h1 class="text-white text-shadow text-bg">編集ページ</h1>
+<h1 class="text-white text-shadow fivewords-bg">編集ページ</h1>
 
 <div class="d-flex align-items-center justify-content-center flex-column  m-5">
   <%= form_with model:@user, url:page_path, local:true, class:"d-flex align-items-center justify-content-center flex-column" do |f|%>
