--- a/app/views/mountains/index.html.erb
+++ b/app/views/mountains/index.html.erb
@@ -3,7 +3,7 @@
 <div class="d-flex align-items-center justify-content-center flex-column">
   <div class="display-4 m-5 text-white text-shadow font-weight-bold">登る山を探しましょう！</div>
 
-  <%= search_form_for @m, class:"d-flex align-items-center justify-content-center text-white text-shadow h5 mb-4" do |f| %>
+  <%= search_form_for @mountains, class:"d-flex align-items-center justify-content-center text-white text-shadow h5 mb-4" do |f| %>
     <div class="mx-5">
       <%= f.label :name_cont, "山の名前", class:"mr-2" %>
       <%= f.search_field :name_cont %>
@@ -29,7 +29,7 @@
 
   <div class="text-white text-center">
     <table class="table_sticky">
-      <% if @results.length !=0 %>
+      <% if @mountain_results.length !=0 %>
         <thead class="text-shadow h3">
           <tr>
             <th class="p-2">山の名前</th>
@@ -39,7 +39,7 @@
           </tr>
         </thead>
         <tbody class="bg-search h5">
-          <% @results.each do |result| %>
+          <% @mountain_results.each do |result| %>
             <tr>
               <td class="p-2"><%= link_to result.name, mountain_path(result.id), class:"text-white" %></td>
               <td class="p-2"><%= result.area.name %></td>
