--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -1,15 +1,21 @@
 <div class="top-image">
+
 <h1 class="text-white text-shadow fivewords-bg">皆様の投稿</h1>
-<% if @tweets.length !=0 %>
-  <% @tweets.each do |tweet| %>
-      <div class="d-inline-block">
+
+<div class="tweet-scroll d-flex justify-content-start align-items-center tweet-bar-bg">
+  <% if @tweets.length !=0 %>
+    <% @tweets.each do |tweet| %>
+      <div class="d-inline-block m-1">
         <div class="d-flex justify-content-center align-items-center flex-column">
           <div><a href="/tweets/<%= tweet.id %>"><%= image_tag tweet.image.variant(combine_options:{gravity: :center, resize:"200x200^",crop:"200x200+0+0"}).processed %></a></div>
-          <div><%= tweet.title %></div>
-          <div><%= link_to tweet.user.name, page_path(tweet.user.id) %></div>
+          <div class="tweet-bg text-center text-white text-shadow">
+            <div><%= tweet.title %></div>
+            <div><%= link_to tweet.user.name, page_path(tweet.user.id) %></div>
+          </div>
         </div>
       </div>
+    <% end %>
+  <% else %>
+    <div class="h2 text-white text-shadow my-3">現在、投稿はありません</div>
   <% end %>
-<% else %>
-  <div class="h2 text-white text-shadow my-3">現在、投稿はありません</div>
-<% end %>
+<div>
