--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -3,6 +3,8 @@
 
 <div class="d-flex align-items-center justify-content-center flex-column  m-5">
   <%= form_with model:@tweet, local:true, class:"d-flex align-items-center justify-content-center flex-column" do |f|%>
+    <%= render 'layouts/error_messages', model: f.object %>
+
     <div class="m-5 text-white text-shadow text-center">
       <%= f.label :image, "投稿する写真", class:"h4" %><br />
       <%= f.file_field :image, class:"text-shadow" %>
