--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -14,8 +14,8 @@
             <div><a href="/tweets/<%= tweet.id %>"><%= image_tag tweet.image.variant(combine_options:{gravity: :center, resize:"200x200^",crop:"200x200+0+0"}).processed %></a></div>
           <% end %>
           <div class="tweet-bg text-center text-white text-shadow mt-2">
-            <div><%= tweet.title %></div>
-            <div><%= link_to tweet.user.name, page_path(tweet.user.id) %></div>
+            <div class="h4"><%= tweet.title %></div>
+            <div><%= link_to tweet.user.name, page_path(tweet.user.id), class:"text-white" %></div>
           </div>
         </div>
       </div>
