--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,1 +1,28 @@
-<h1>ルーム作成画面</h1>
+<div class="chat-image">
+
+<h1 class="text-white text-shadow fourteenwords-bg">チャットルーム新規作成ページ</h1>
+
+<div class="d-flex align-items-center justify-content-center m-5">
+  <div class="chat-bg d-flex align-items-center justify-content-center">
+    <%= form_with model: @room, local: true do |f|%>
+      <div class="d-flex align-items-center justify-content-center flex-column m-5">
+        <label class="text-white text-shadow h4">チャットルーム名</label>
+        <%= f.text_field :name, size:"40", placeholder: 'チャットルーム名を入力してください'%>
+      </div>
+
+      <div class="d-flex align-items-center justify-content-center flex-column m-5">
+        <label class="text-white text-shadow h4">チャットメンバー</label>
+
+        <select name="room[user_ids][]">
+          <option value="">チャットをするユーザーを選択してください</option>
+          <% User.where.not(id: current_user.id).each do |user|%>
+            <option value = <%= user.id %>><%= user.name %></option>
+          <% end %>
+        </select>
+        <input name="room[user_ids][]" type="hidden" value=<%= current_user.id %>>
+
+        <%= f.submit "作成", class:"mt-5" %>
+      </div>
+    <% end %>
+  </div>
+</div>
