--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -299,13 +299,13 @@ body.noscroll{
   background: rgb(110, 153, 108);
 }
 
-.tweet-scroll {
+.toppage-scroll {
   height: 285px;
   width: 99vw;
   overflow-x: scroll;
 }
 
-.tweet-bar-bg {
+.top-bar-bg {
   background-color: rgba(255, 255, 255, 0.6);
 }
 
@@ -349,8 +349,20 @@ body.noscroll{
   background: rgba(55, 75, 54, 0.8);
 }
 
-.chat-bg {
+.newchat-bg {
   background: rgba(55, 75, 54, 0.8);
   height: 300px;
   width: 500px;
+}
+
+.ninewords-bg {
+  height: auto;
+  width: 365px;
+  background: rgba(55, 75, 54, 0.8);
+}
+
+.topchat-bg {
+  height: 200px;
+  width: 300px;
+  background: rgb(110, 153, 108);
 }
