--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -3,7 +3,7 @@
 <h1 class="text-white text-shadow fourteenwords-bg">チャットルーム新規作成ページ</h1>
 
 <div class="d-flex align-items-center justify-content-center m-5">
-  <div class="chat-bg d-flex align-items-center justify-content-center">
+  <div class="newchat-bg d-flex align-items-center justify-content-center">
     <%= form_with model: @room, local: true do |f|%>
       <div class="d-flex align-items-center justify-content-center flex-column m-5">
         <label class="text-white text-shadow h4">チャットルーム名</label>
