トップページのデザイン

--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -21,7 +21,7 @@
       </div>
     <% end %>
   <% else %>
-    <div class="h2 text-white text-shadow my-3">現在、投稿はありません</div>
+    <div class="h2 text-white text-shadow m-5">現在、投稿はありません</div>
   <% end %>
 </div>
 
