--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -387,7 +387,7 @@ body.noscroll{
   position: fixed;
   bottom: 0;
   background-color: rgb(243, 243, 243);
-  height: 50px;
+  height: calc(100vh/20);
   width: 100%;
   display: flex;
   align-items: center;
