--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -362,8 +362,8 @@ body.noscroll{
 }
 
 .topchat-bg {
-  height: 200px;
-  width: 300px;
+  min-height: 200px;
+  min-width: 300px;
   background: rgb(110, 153, 108);
 }
 
