--- a/app/views/pages/top.html.erb
+++ b/app/views/pages/top.html.erb
@@ -1,5 +1,10 @@
 <div class="top-image">
 
+<div class="mb-5 d-flex align-items-center">
+  <h1 class="text-white text-shadow sixwords-bg">登山先の検索</h1>
+  <%= link_to "山の検索ページはこちら", mountains_path, class:"btn btn-light rounded-pill px-2 mx-4 box-shadow"%>
+</div>
+
 <div class="mb-3 d-flex align-items-center">
   <h1 class="text-white text-shadow fivewords-bg">皆様の投稿</h1>
   <%= link_to "新規投稿はこちら",new_tweet_path, class:"btn btn-light rounded-pill px-2 mx-4 box-shadow" %>
