--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -3,8 +3,10 @@
 <h1 class="text-white text-shadow fourteenwords-bg">チャットルーム新規作成ページ</h1>
 
 <div class="d-flex align-items-center justify-content-center m-5">
-  <div class="newchat-bg d-flex align-items-center justify-content-center">
-    <%= form_with model: @room, local: true do |f|%>
+  <div class="newchat-bg">
+    <%= form_with model: @room, local: true, class:"d-flex align-items-center justify-content-center flex-column" do |f|%>
+      <%= render 'layouts/error_messages', model: f.object, class:"text-center" %>
+
       <div class="d-flex align-items-center justify-content-center flex-column m-5">
         <label class="text-white text-shadow h4">チャットルーム名</label>
         <%= f.text_field :name, size:"40", placeholder: 'チャットルーム名を入力してください'%>
@@ -14,7 +16,7 @@
         <label class="text-white text-shadow h4">チャットメンバー</label>
 
         <select name="room[user_ids][]">
-          <option value="">チャットをするユーザーを選択してください</option>
+          <option disabled selected value>チャットをするユーザーを選択してください</option>
           <% User.where.not(id: current_user.id).each do |user|%>
             <option value = <%= user.id %>><%= user.name %></option>
           <% end %>
