--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -15,8 +15,8 @@
       <div class="d-flex align-items-center justify-content-center flex-column m-5">
         <label class="text-white text-shadow h4">チャットメンバー</label>
 
-        <select name="room[user_ids][]">
-          <option disabled selected value>チャットをするユーザーを選択してください</option>
+        <select name="room[user_ids][]" required>
+          <option value="">チャットをするユーザーを選択してください</option>
           <% User.where.not(id: current_user.id).each do |user|%>
             <option value = <%= user.id %>><%= user.name %></option>
           <% end %>
