説明ページの作成

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,16 +1,13 @@
-<html>
-  <head>
-  </head>
-  <body>
-    <div class="d-flex flex-column align-items-center justify-content-center text-white home-image text-shadow">
-      <div class="m-5 display-3 font-weight-bold">
-        <p>MT.BEGINNERとは？</p>
-      </div>
-      <div class="text-center m-5 h3">
-        <p>もっと気軽に登山したい… そんなあなたのためのアプリ</p>
-        <p>登る山をさがしたり、一緒に登る仲間を探したり、情報を共有したり</p>
-        <p>初心者〜中級者の登山者を応援します！</p>
-      </div>
-    </div>
-  </body>
-</html>
+<div class="d-flex flex-column align-items-center justify-content-center text-white home-image text-shadow">
+  <div class="m-5 display-3 font-weight-bold">
+    <p>MT.BEGINNERとは？</p>
+  </div>
+
+  <div class="text-center m-5 h3">
+    <p>もっと気軽に登山したい… そんなあなたのためのアプリ</p>
+    <p>登る山をさがしたり、一緒に登る仲間を探したり、情報を共有したり</p>
+    <p>初心者〜中級者の登山者を応援します！</p>
+  </div>
+
+  <%= link_to "機能についての説明はこちら", pages_explain_path, class:"m-5 h5 text-white" %>
+</div>
