写真投稿のタイトルサイズ変更

--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -12,7 +12,7 @@
 
     <div class="m-3 text-white text-shadow text-center">
       <%= f.label :title, "タイトル(必須)", class:"h4" %><br />
-      <%= f.text_field :title, class:"box-shadow" %>
+      <%= f.text_field :title, class:"box-shadow", size:"50" %>
     </div>
 
     <div class="m-5 text-white text-shadow text-center">
