--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
                   <li class="nav-item my-5"><a href="/pages/<%= current_user.id %>" class="text-white">マイページ</a></li>
                   <li class="nav-item my-5"><a href="/mountains" class="text-white">山検索</a></li>
                   <li class="nav-item my-5"><a href="/tweets/new" class="text-white">写真投稿</a></li>
-                  <li class="nav-item my-5"><a href="/rooms/new" class="text-white">チャットルーム</a></li>
+                  <li class="nav-item my-5"><a href="/rooms/new" class="text-white">チャットルーム作成</a></li>
                 </ul>
               </nav>
             </div>
