--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -78,6 +78,13 @@
   background: rgba(55, 75, 54, 0.8);
  }
 
+.explain-bg {
+  overflow-y: scroll;
+  height: calc(250vh/3);
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
 /* トップページ・ハンバーガーメニュー */
  .top-image {
   position: relative;
