--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,5 +9,5 @@
     <p>初心者〜中級者の登山者を応援します！</p>
   </div>
 
-  <%= link_to "機能についての説明はこちら", pages_explain_path, class:"m-5 h5 text-white" %>
+  <%= link_to "機能についての説明はこちら", pages_explain_path, class:"m-5 h5 text-white toptext-bg d-flex align-items-center justify-content-center" %>
 </div>
