マイページのタイトル付け

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,4 +1,5 @@
 <div class="mypage-image">
+<h1 class="roomname-bg text-shadow text-white"><%= @user.name %>さんのページ</h1>
 
 <div class="d-flex align-items-center justify-content-center flex-column">
   <div class="m-4 image-shadow">
