新規登録画面のデザイン・メッセージ変更

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,12 +20,12 @@
       </div>
 
       <div class="field d-flex justify-content-between">
-        <%= f.label :"パスワード(6文字以上)" %>
+        <%= f.label :"パスワード（6文字以上）" %>
         <%= f.password_field :password, autocomplete: "new-password" %>
       </div>
 
       <div class="field d-flex justify-content-between">
-        <%= f.label :パスワード再入力 %>
+        <%= f.label :パスワード（確認用） %>
         <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
       </div>
     </div>
